Need to set the home

--- a/Helm/charts/tomo_align/templates/deployment.yaml
+++ b/Helm/charts/tomo_align/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
           - -c
           - >-
               {{ .Values.command }}
+        env:
+          - name: HOME
+            value: "/tmp"
         volumeMounts:
         - name: config-file
           mountPath: /cryoemservices/config
