--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "starfile",
     "stomp-py>8.1.1",
     "tifffile", # CLEM workflow
+    "txrm2tiff",
     "workflows>=3",
 ]
 [project.optional-dependencies]
