Added 'images plugin' function to convert TIFF to PNG

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,7 @@ torch = [
     "picked_particles" = "cryoemservices.services.images_plugins:picked_particles"
     "picked_particles_3d_apng" = "cryoemservices.services.images_plugins:picked_particles_3d_apng"
     "picked_particles_3d_central_slice" = "cryoemservices.services.images_plugins:picked_particles_3d_central_slice"
+    "tiff_to_apng" = "cryoemservices.services.images_plugins:tiff_to_apng"
     "tilt_series_alignment" = "cryoemservices.services.images_plugins:tilt_series_alignment"
 [project.entry-points."cryoemservices.services.process_recipe.filters"]
     ispyb = "cryoemservices.util.process_recipe_tools:ispyb_filter"
