--- a/recipes/clem-align-and-merge-wrapper.json
+++ b/recipes/clem-align-and-merge-wrapper.json
@@ -10,7 +10,8 @@
       "align_across": "{align_across}"
     },
     "output": {
-      "murfey_feedback": 2
+      "murfey_feedback": 2,
+      "images": 3
     },
     "parameters": {
       "cluster": {
@@ -45,6 +46,10 @@
     },
     "queue": "{feedback_queue}",
     "service": "Murfey"
+  },
+  "3": {
+    "queue": "images",
+    "service": "Images"
   },
   "start": [[1, []]]
 }
