--- a/recipes/clem-tiff-to-stack-wrapper.json
+++ b/recipes/clem-tiff-to-stack-wrapper.json
@@ -7,7 +7,8 @@
       "metadata": "{metadata}"
     },
     "output": {
-      "murfey_feedback": 2
+      "murfey_feedback": 2,
+      "images": 3
     },
     "parameters": {
       "cluster": {
@@ -42,6 +43,10 @@
     },
     "queue": "{feedback_queue}",
     "service": "Murfey"
+  },
+  "3": {
+    "queue": "images",
+    "service": "Images"
   },
   "start": [[1, []]]
 }
