Migrate 2d extraction to new file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ torch = [
     EMISPyB = "cryoemservices.services.ispyb_connector:EMISPyB"
     Extract = "cryoemservices.services.extract:Extract"
     ExtractClass = "cryoemservices.services.extract_class:ExtractClass"
-    ExtractSubTomo = "cryoemservices.services.extract_subtomo:ExtractSubTomoFor2D"
+    ExtractSubTomo = "cryoemservices.services.extract_2d_subtomo:ExtractSubTomoFor2D"
     IceBreaker = "cryoemservices.services.icebreaker:IceBreaker"
     Images = "cryoemservices.services.images:Images"
     MembrainSeg = "cryoemservices.services.membrain_seg:MembrainSeg"
