--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,7 @@ torch = [
     "mrc_central_slice" = "cryoemservices.services.images_plugins:mrc_central_slice"
     "mrc_projection" = "cryoemservices.services.images_plugins:mrc_projection"
     "mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
+    "mrc_to_apng_colour" = "cryoemservices.services.images_plugins:mrc_to_apng_colour"
     "mrc_to_jpeg" = "cryoemservices.services.images_plugins:mrc_to_jpeg"
     "picked_particles" = "cryoemservices.services.images_plugins:picked_particles"
     "picked_particles_3d_apng" = "cryoemservices.services.images_plugins:picked_particles_3d_apng"
