--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ dev = [
     "pytest-mock",
 ]
 torch = [
+    "easymode@git+https://github.com/mgflast/easymode",
     "membrain-seg",
     "topaz-em",
 ]
