Add dockerfile and helm components for easymode

--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -13,6 +13,7 @@ dependencies:
   - name: ctffind
   - name: denoise
   - name: denoise_slurm
+  - name: easymode
   - name: extract
   - name: extract_class
   - name: icebreaker
