--- a/Helm/charts/easymode/templates/deployment.yaml
+++ b/Helm/charts/easymode/templates/deployment.yaml
@@ -42,6 +42,8 @@ spec:
             value: "1"
           - name: OMP_NUM_THREADS
             value: "1"
+          - name: HOME
+            value: "/tmp"
         volumeMounts:
         - name: config-file
           mountPath: /cryoemservices/config
@@ -104,7 +106,7 @@ spec:
     - type: rabbitmq
       metadata:
         host: {{ .Values.global.rmqHost }}
-        queueName: segmentation
+        queueName: easymode
         mode: QueueLength
         value: "{{ .Values.queueLengthTrigger }}"
   minReplicaCount: {{ .Values.minReplicaCount }}
