--- a/recipes/clem-align-and-merge-wrapper.json
+++ b/recipes/clem-align-and-merge-wrapper.json
@@ -7,7 +7,8 @@
       "crop_to_n_frames": "{crop_to_n_frames}",
       "align_self": "{align_self}",
       "flatten": "{flatten}",
-      "align_across": "{align_across}"
+      "align_across": "{align_across}",
+      "num_procs": "{num_procs}"
     },
     "output": {
       "murfey_feedback": 2,
@@ -38,7 +39,7 @@
       "workingdir": "{session_dir}/processed/"
     },
     "queue": "cluster.submission",
-    "service": "ALIGN-AND-MERGE"
+    "service": "CLEM-ALIGN-AND-MERGE"
   },
   "2": {
     "parameters": {
