--- a/recipes/clem-lif-to-stack-wrapper.json
+++ b/recipes/clem-lif-to-stack-wrapper.json
@@ -2,7 +2,8 @@
   "1": {
     "job_parameters": {
       "lif_file": "{lif_file}",
-      "root_folder": "{root_folder}"
+      "root_folder": "{root_folder}",
+      "num_procs": "{num_procs}"
     },
     "output": {
       "murfey_feedback": 2,
@@ -33,7 +34,7 @@
       "workingdir": "{session_dir}/processed/"
     },
     "queue": "cluster.submission",
-    "service": "LIF2STACK"
+    "service": "CLEM-PROCESS-LIFS"
   },
   "2": {
     "parameters": {
