--- a/recipes/clem-tiff-to-stack-wrapper.json
+++ b/recipes/clem-tiff-to-stack-wrapper.json
@@ -4,7 +4,8 @@
       "tiff_list": "{tiff_list}",
       "tiff_file": "{tiff_file}",
       "root_folder": "{root_folder}",
-      "metadata": "{metadata}"
+      "metadata": "{metadata}",
+      "num_procs": "{num_procs}"
     },
     "output": {
       "murfey_feedback": 2,
@@ -35,7 +36,7 @@
       "workingdir": "{session_dir}/processed/"
     },
     "queue": "cluster.submission",
-    "service": "TIFF2STACK"
+    "service": "CLEM-PROCESS-TIFFS"
   },
   "2": {
     "parameters": {
